app/assets/stylesheets/venues.css.scss
.in-or-not-section {
  float: left;
  margin-left: 10px;
  width: 48%;
  background-color: #FF9933;
  padding: 0px;
  padding-bottom: 18px;
  overflow: auto;
}

.in-or-not-header {
  width: 100%;
  font-size: 19pt;
  text-align: center;
  font-weight: 200;
  font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Arial', sans-serif;
  background-color: #FF6600;
  color: #f8f5f5;
  margin:0px;
  padding-top: 6px;
  border:0px;
  height: 50px;
}

.in-or-not-choice {
  width: 60%;
  margin: auto;
  height: 100px;
  padding: 15px;
}

.in-button {
  float: left;
  background-color: #ffffff;
  color: green;
  height: 100%;
  width: 100px;

}

.not-in-button {
  float: right;
  background-color: #ffffff;
  color: red;
  height: 100%;
  width: 100px;
}


.winning-venue-section {
  float: left;
  margin-left: 10px;
  width: 48%;
  background-color: #FF9933;
  padding: 0px;
  padding-bottom: 18px;
  overflow: auto;
}

.order-list-section {
  padding-left: 5%;
  padding-right: 5%;
  background-color: #FF9933;
  width: 90%;
  margin: auto;
  margin-top: 8px;
}
.order-item{
  position: relative;
  display: block;
  padding-top: 0px;
  padding-bottom: 8px;
  padding-left: 15px;
  padding-right:0px;
  margin: 0px;
  border: 1px solid #FF9933;
  background-color: #FAC184;
  color:#D1710b;
}
span.order-list-heading{
  color:#855119;
  display: block;
  margin-bottom: 6px;
  font-size:18px;
}
.winner-header{
  width: 100%;
  font-size: 19pt;
  text-align: center;
  font-weight: 200;
  font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Arial', sans-serif;
  background-color: #FF6600;
  color: #f8f5f5;
  margin:0px;
  padding-top: 6px;
  border:0px;
  height: 50px;
}
.submit-order{
  height:120px;
  padding-left: 5%;
  padding-right: 5%;
}
.submitted-order{
  margin-top: 6px;
  height:90px;
  padding-left: 14%;
  padding-right:14%;
  padding-top:0px;
  color:#ff6600;
  font-size:15px;

}
.indicator{
  color:#D6550F;
  margin-bottom: 0px;
}
.order-form{
  height:68px;
  width: 80%;
  margin:auto;
  margin-top:30px;
}
.saved-order{
  height:68px;
  width: 100%;
  margin:auto;
  margin-top:4px;
  background-color: #FAC184;
  padding-left: 10px;
  padding-top: 8px;
}
.submit-order-button{
  width: 80px;
  height: 30px;
  float:right;
  margin-top: 8px;
  margin-right:10%;
  background-color: #ffffff;
  border:0px;
  color:#888888;
  font-size: 15px;
}
span.order-content{
  width: 50px;
  text-align: center;
  font-size:17px;
  margin-top: 50px;
}
.edit-order-button{
  width: 80px;
  height: 30px;
  float:right;
  margin-top: 8px;
  margin-right:0%;
  background-color: #ffffff;
  border:0px;
  color:#888888;
  font-size: 15px;
  border-radius: 3px;
}
.rating-group-wrap {
  float: right;
  width: 130px;
}

.custom-rating-group {
  width: 25px;
  margin-top: 0px;
  height: 25px;
}

.custom-rating {
  float: left;
  width: 25px;
  margin: 0px;
}

.rate {
  background-size: 22px 88px;
  height: 22px;
  width: 22px;
  margin: 0px;
  padding: 0px;
  &.selected {
    background-position: left -44px;
  }

  &.icon1 {
    background-image: url(face_1A.png);
  }
  &.icon3 {
    background-image: url(face_2.png);
  }
  &.icon4 {
    background-image: url(face_3.png);
  }
  &.icon5 {
    background-image: url(face_4.png);
  }
  &.icon7 {
    background-image: url(face_5.png);
  }
}

body.venue-page {
  font-size: 16px;
}

.venues-list-section {
  -moz-box-shadow: 3px 3px 3px #888888;
  box-shadow: 3px 3px 3px #888888;
}

.venue-header {
  width: 100%;
  font-size: 19pt;
  text-align: center;
  font-weight: 200;
  font-family: 'Helvetica Neue Light', 'Helvetica Neue', 'Arial', sans-serif;
  background-color: #FF6600;
  color: #f8f5f5;
  padding-bottom: 10px;
  padding-top: 5px;


}

.venue-list {
  margin-bottom: 0px;
  background-color: #f7f8f8;
}

.venue-item {
  position: relative;
  display: block;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 15px;
  padding-right:0px;
//  padding:8px,0px,8px,15px;
  margin-bottom: -1px;
  border: 1px solid #dddddd;
}

.max-thumb {
  float: left;
  background-color: #FF9933;
  color: #ffffff;
  width: 55px;
  height: 55px;
  text-align: center;
  padding-top: 5px;
  font-size: 34px;
  text-transform: uppercase;

}

.min-thumb {
  float: left;
  background-color: #FF9933;
  color: #ffffff;
  width: 40px;
  height: 40px;
  text-align: center;
  padding-top: 8px;
  font-size: 18px;
  text-transform: uppercase;
}

.test-class {
  float: right;
}

.venue-item-heading {
  padding-left: 15px;
  font-weight: 500;
  color: #828181;
  width: 75%;
  margin-right: 0px;
}

a:hover {
  color: #FF9933;
  text-decoration: none;
}

.venue-item-text {
  font-size: 10.72px;
  margin-left: 70px;
  color: #828181;
  letter-spacing: 0.8px;
  width: 75%;
  margin-right: 0px;

}

.address {
  width: 75%;
}

.description {
  width: 75%;
}

.addVenue-group {
  display: block;
}

.addVenue-toggle {
  border: 0px;
  background-color: #FF6600;
}

.addVenue-button {
  height: 40px;
  background-color: #FF6600;
  display: block;
  width: 100%;
  margin: 0px;
  border: 0px;
  color: #ffffff;
  font-size: 20px
}

.error-label {
  font-size: 12px;
  color: red;
  padding-left: 10px;
}

.errorInputBox {
  border-color: red;
}

@media (min-width: 750px) {

  button.addVenue-button:hover {
    background-color: #FF9933;
  }

  button.addVenue-toggle:hover {
    background-color: #FF9933;
  }

  .venues-list-section {
//    float: left;
    margin-left: 10px;
    width: 48%;
  }

  .venues-add-section {
    float: right;
    margin-right: 10px;
    width: 48%;
  }

  .rate:hover {
    background-position: left -22px;
  }
  .venue-item{
    padding-right: 15px;
  }

}

.min-view {
  display: none;
}

